--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "name": "y  outube-mod-bot",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "yt-livechat": "^2.1.1"
+    "easy-db-json": "^1.1.2",
+    "express": "^4.18.1",
+    "googleapis": "^105.0.0"
   }
 }
