--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.0.1",
     "easy-db-json": "^1.1.2",
     "express": "^4.18.1",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "mongoose": "^6.7.2"
   }
 }
