--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "easy-db-json": "^1.1.4",
     "express": "^4.18.1",
-    "googleapis": "^105.0.0"
+    "googleapis": "^105.0.0",
+    "vid_data": "^1.0.0"
   },
   "scripts": {
     "start": "node server.js"
