--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "alienbot-youtube",
   "description": "The youtube version of AlienBot.",
   "dependencies": {
+    "@coffeeandfun/google-profanity-words": "^2.1.0",
     "easy-db-json": "^1.1.4",
     "express": "^4.18.1",
     "googleapis": "^105.0.0",
